--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,20 @@
-[tool.poetry]
-name = "spectral_density_fit"
-version = "0.1.0"
-description = "Fit arbitrary spectral densities with a few-mode model"
-authors = ["Johannes Feist <johannes.feist@gmail.com>"]
-
-[tool.poetry.dependencies]
-python = "^3.7"
-jax = "^0.2.19"
-nlopt = "^2.7.0"
-
-[tool.poetry.dev-dependencies]
-pytest = "^5.2"
-
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["flit_core >=3.2,<4"]
+build-backend = "flit_core.buildapi"
+
+[project]
+name = "spectral_density_fit"
+authors = [{name = "Johannes Feist", email = "johannes.feist@gmail.com"}]
+readme = "README.md"
+license = {file = "LICENSE"}
+classifiers = ["License :: OSI Approved :: MIT License"]
+dynamic = ["version", "description"]
+requires-python = ">=3.7"
+dependencies = [
+    "numpy >=1.15",
+    "jax >=0.3",
+    "nlopt >=2.7.0",
+]
+
+[project.urls]
+Home = "https://github.com/jfeist/spectral_density_fit"
