add ruff formatting settings to pyproject.toml, and apply it to the codes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,8 @@ dev = [
 filterwarnings = [
     "ignore:builtin type [sS]wig[a-zA-Z]+ has no __module__ attribute:DeprecationWarning",
 ]
+
+[tool.ruff]
+line-length = 200
+[tool.ruff.format]
+skip-magic-trailing-comma = true
