--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ Home = "https://github.com/jfeist/spectral_density_fit"
 [dependency-groups]
 dev = [
     "pytest>=7.4.4",
+    "pytest-benchmark>=4.0.0",
     "ruff>=0.11.2",
 ]
 
